--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     </head>
     <body>
         <div class="header">
-
             <img class="profile" src=templates/homepage/scott-circle.png>
             <h1 class="profile-name">Scott Maynard</h1>
             <div class="nav">
@@ -32,13 +31,22 @@
                 </ul>
             </div>
         </div>
-        <div class="hello">
-            <h2>Hello!</h2>
-        </div>
         <div class="content">
-            <div class="paragraph">
-                <p>This is a test of my updated index.html page!</p>
-            </div>
+            <h2 id="hello">Hello, world!</h2>
+            <p>
+                My name is Scott and I'm a self-taught developer.
+            </p>
+            <p>
+                I initially began my career in sales. 
+                Oddly, my colleagues always remarked that I seemed more like a programmer than a salesman.
+                This came as a surprise to me since I thought it was normal for salespeople to:
+                <ul class="habit-list">
+                    <li class="habit">convert sales presentations into flowchart form with if-then statements to make it easier to teach the pitch to new hires</li>
+                    <li class="habit">track sales funnels in Excel to identify bottlenecks and inefficiencies</li>
+                    <li class="habit">Google everything they don't understand</li>
+                </ul>
+                I've since devoted most of my free time to learning the fundamentals of computer science in order to change my career trajectory.
+            </p>
         </div>
     </body>    
 </html>
