--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                 I initially began my career in sales. 
                 Oddly, my colleagues always remarked that I seemed more like a programmer than a salesman.
                 This came as a surprise to me since I thought it was normal for salespeople to:
-                <ul class="habit-list">
-                    <li class="habit">convert sales presentations into flowchart form with if-then statements to make it easier to teach the pitch to new hires</li>
-                    <li class="habit">track sales funnels in Excel to identify bottlenecks and inefficiencies</li>
-                    <li class="habit">Google everything they don't understand</li>
+                <ul>
+                    <li>convert sales presentations into flowchart form with if-then statements to make it easier to teach the pitch to new hires</li>
+                    <li>track sales funnels in Excel to identify bottlenecks and inefficiencies</li>
+                    <li>Google everything they don't understand</li>
                 </ul>
                 I've since devoted most of my free time to learning the fundamentals of computer science in order to change my career trajectory.
             </p>
