added projects page; added finance

--- a/projects.html
+++ b/projects.html
@@ -32,21 +32,11 @@
             </div>
         </div>
         <div class="content">
-            <h1 style="text-align:center">About Me</h1>
-            <p>
-                Hello, world! My name is Scott and I'm a self-taught developer.
-            </p>
-            <p>
-                I initially began my career in sales. 
-                Oddly, my colleagues always remarked that I seemed more like a programmer than a salesman.
-                This came as a surprise to me since I thought it was normal for salespeople to:
-                <ul>
-                    <li>convert sales presentations into flowchart form with if-then statements to make it easier to teach the pitch to new hires</li>
-                    <li>track sales funnels in Excel to identify bottlenecks and inefficiencies</li>
-                    <li>Google everything they don't understand</li>
-                </ul>
-                I've since devoted most of my free time to learning the fundamentals of computer science in order to change my career trajectory.
-            </p>
+            <h1 style="text-align:center">Projects</h1>
+            <h2 id="finance"><a href="https://cs50finance.herokuapp.com">Finance</a></h2>
+            <p>Finance is a stock-trading demo utilizing Python's Flask framework, PostgreSQL, and IEX Cloud's financial API. Originally submitted as a class assignment, I've since added additional features to it.</p>
+            <p><a href="https://github.com/smaynard90/finance">View Source</a></p>
+            <hr />
         </div>
     </body>    
 </html>
