--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,11 @@
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Projects</title>
+        <title>Scott Maynard</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
         <link rel="stylesheet" href="templates/homepage/styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     </head>
     <body>
         <div class="header">
@@ -29,11 +29,21 @@
             </div>
         </div>
         <div class="content">
-            <h1 style="text-align:center">Projects</h1>
-            <h2 id="finance"><a href="https://cs50finance.herokuapp.com">Finance</a></h2>
-            <p>Finance is a stock-trading demo utilizing Python's Flask framework, PostgreSQL, and IEX Cloud's financial API.</p>
-            <p><a href="https://github.com/smaynard90/finance">View Source</a></p>
-            <hr />
+            <h1 style="text-align:center">Contact Me</h1>
+            <div class="form">
+                <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/mgerrjob" method="post">
+                    <fieldset id="fs-frm-inputs">
+                        <label for="full-name">Full Name</label>
+                        <input type="text" name="name" id="full-name" required="">
+                        <label for="email-address">Email Address</label>
+                        <input type="email" name="_replyto" id="email-address" required="">
+                        <label for="message">Message</label>
+                        <textarea rows="5" name="message" id="message" required=""></textarea>
+                        <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
+                    </fieldset>
+                    <input id="submit-contact" type="submit" value="Submit">
+                </form>
+            </div>
         </div>
-    </body>
+    </body>    
 </html>
