--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
                         <textarea rows="5" name="message" id="message" required=""></textarea>
                         <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
                     </fieldset>
-                    <input id="submit-contact" type="submit" value="Submit">
+                    <input id="submit-contact" type="submit" value="Go!">
                 </form>
             </div>
         </div>
