rephrased for clarity

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 Oddly, my colleagues always remarked that I seemed more like a programmer than a salesman.
                 This came as a surprise to me since I thought it was normal for salespeople to:
                 <ul>
-                    <li>convert sales presentations into flowchart form with if-then statements to make it easier to teach the pitch to new hires</li>
+                    <li>convert sales presentations into flowcharts with if-then statements in order to teach the pitch to new hires more elegantly</li>
                     <li>track sales funnels in Excel to identify bottlenecks and inefficiencies</li>
                     <li>Google everything they don't understand</li>
                 </ul>
