added Space Invaders to Projects

--- a/projects.html
+++ b/projects.html
@@ -34,6 +34,10 @@
             <p>Finance is a stock-trading demo utilizing Python's Flask framework, PostgreSQL, and IEX Cloud's financial API.</p>
             <p><a href="https://github.com/smaynard90/finance">View Source</a></p>
             <hr />
+            <h2 id="space-invaders"><a href="https://youtu.be/bCSGu4nfSig">Space Invaders</a></h2>
+            <p>Space Invaders is a classic shoot-em-up arcade game written in DrRacket. The source code emphasizes systematic program design and extensive unit testing for arbitrarily large data.</p>
+            <p><a href="https://github.com/smaynard90/space-invaders">View Source</a></p>
+            <hr />
         </div>
     </body>
 </html>
