--- a/projects.html
+++ b/projects.html
@@ -1,43 +1,53 @@
-
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Projects</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-        <link rel="stylesheet" href="templates/homepage/styles.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div class="header">
-            <img class="profile" src=templates/homepage/scott-circle.png>
-            <h1 class="profile-name">Scott Maynard</h1>
-            <div class="nav">
-                <ul class="nav-list">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="projects.html">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/smaynard90">GitHub</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </div>
+
+<head>
+    <title>Projects</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link rel="stylesheet" href="templates/homepage/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+    <div class="header">
+        <img class="profile" src=templates/homepage/scott-circle.png>
+        <h1 class="profile-name">Scott Maynard</h1>
+        <div class="nav">
+            <ul class="nav-list">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="projects.html">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://github.com/smaynard90">GitHub</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+            </ul>
         </div>
-        <div class="content">
-            <h1 style="text-align:center">Projects</h1>
-            <h2 id="finance"><a href="https://cs50finance.herokuapp.com">Finance</a></h2>
-            <p>Finance is a stock-trading demo utilizing Python's Flask framework, PostgreSQL, and IEX Cloud's financial API.</p>
-            <p><a href="https://github.com/smaynard90/finance">View Source</a></p>
-            <hr />
-            <h2 id="space-invaders"><a href="https://youtu.be/bCSGu4nfSig">Space Invaders</a></h2>
-            <p>Space Invaders is a classic shoot-em-up arcade game written in DrRacket. The source code emphasizes systematic program design and extensive unit testing for arbitrarily large data.</p>
-            <p><a href="https://github.com/smaynard90/space-invaders">View Source</a></p>
-            <hr />
-        </div>
-    </body>
+    </div>
+    <div class="content">
+        <h1 style="text-align:center">Projects</h1>
+        <h2 id="finance"><a href="https://cs50finance.herokuapp.com">Finance</a></h2>
+        <p>Finance is a stock-trading demo utilizing Python's Flask framework, PostgreSQL, and IEX Cloud's financial
+            API.</p>
+        <p><a href="https://github.com/smaynard90/finance">View Source</a></p>
+        <hr />
+        <h2 id="space-invaders"><a href="https://youtu.be/bCSGu4nfSig">Space Invaders</a></h2>
+        <p>Space Invaders is a classic shoot-em-up arcade game written in DrRacket. The source code emphasizes
+            systematic program design and extensive unit testing for arbitrarily large data.</p>
+        <p><a href="https://github.com/smaynard90/space-invaders">View Source</a></p>
+        <hr />
+        <h2 id="pomodoro"><a href="https://react-pomodoro.herokuapp.com/">Pomodoro</a></h2>
+        <p>Pomodoro is a timer based on the <a href="https://en.wikipedia.org/wiki/Pomodoro_Technique">Pomodoro
+                technique</a>, coded with React.</p>
+        <p><a href="https://github.com/smaynard90/react-pomodoro">View Source</a></p>
+        <hr />
+    </div>
+</body>
+
 </html>
