removed unused files; added LinkedIn

--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,7 @@
                     </fieldset>
                     <input id="submit-contact" type="submit" value="Submit">
                 </form>
+                <p>You can also find me on <a href="https://www.linkedin.com/in/smaynard90/">LinkedIn</a>!</p>
             </div>
         </div>
     </body>    
