added resume; updated page titles

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Scott Maynard</title>
+        <title>Scott Maynard - Contact</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
         <link rel="stylesheet" href="templates/homepage/styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -43,7 +43,7 @@
                     </fieldset>
                     <input id="submit-contact" type="submit" value="Submit">
                 </form>
-                <p>You can also find me on <a href="https://www.linkedin.com/in/smaynard90/">LinkedIn</a>!</p>
+                <p><strong>You can also find me on <a href="https://www.linkedin.com/in/smaynard90/">LinkedIn</a>!</strong></p>
             </div>
         </div>
     </body>    
