--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Scott Maynard</title>
+        <title>Scott Maynard - Home</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
         <link rel="stylesheet" href="templates/homepage/styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,6 +42,9 @@
                     <li>Google everything they don't understand</li>
                 </ul>
                 I've since devoted most of my free time to learning the fundamentals of computer science in order to change my career trajectory.
+            </p>
+            <p class="resume">
+                You can download a copy of my résumé here: <a href="Scott Maynard Resume.docx">Word</a> | <a href="Scott Maynard Resume.pdf">PDF</a>
             </p>
         </div>
     </body>    
