now opens pdf in new tab

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 I've since devoted most of my free time to learning the fundamentals of computer science in order to change my career trajectory.
             </p>
             <p class="resume">
-                You can download a copy of my résumé here: <a href="Scott Maynard Resume.docx">Word</a> | <a href="Scott Maynard Resume.pdf">PDF</a>
+                You can download a copy of my résumé here: <a href="Scott Maynard Resume.docx">Word</a> | <a href="Scott Maynard Resume.pdf" target="_blank">PDF</a>
             </p>
         </div>
     </body>    
