updated LinkedIn URL

--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
                     </fieldset>
                     <input id="submit-contact" type="submit" value="Submit">
                 </form>
-                <p><strong>You can also find me on <a href="https://www.linkedin.com/in/smaynard90/">LinkedIn</a>!</strong></p>
+                <p><strong>You can also find me on <a href="https://www.linkedin.com/in/scott-maynard-dev/">LinkedIn</a>!</strong></p>
             </div>
         </div>
     </body>    
