added meta tags

--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,24 @@
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="templates/homepage/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A website built by Scott T. Maynard" />
+    <meta
+      name="title"
+      property="og:title"
+      content="Scott T. Maynard's Projects"
+    />
+    <meta property="og:type" content="Website" />
+    <meta
+      name="image"
+      property="og:image"
+      content="https://live.staticflickr.com/65535/51744764943_310f9c1bc4_w.jpg"
+    />
+    <meta
+      name="description"
+      property="og:description"
+      content="A website built by Scott T. Maynard"
+    />
+    <meta name="author" content="Scott T. Maynard" />
 </head>
 
 <body>
