--- a/contact.html
+++ b/contact.html
@@ -1,50 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Scott T. Maynard - Contact</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-        <link rel="stylesheet" href="templates/homepage/styles.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    </head>
-    <body>
-        <div class="header">
-            <img class="profile" src=templates/homepage/scott-circle.png>
-            <h1 class="profile-name">Scott Maynard</h1>
-            <div class="nav">
-                <ul class="nav-list">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="projects.html">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/smaynard90">GitHub</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="content">
-            <h1 style="text-align:center">Contact Me</h1>
-            <div class="form">
-                <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/mgerrjob" method="post">
-                    <fieldset id="fs-frm-inputs">
-                        <label for="full-name">Full Name</label>
-                        <input type="text" name="name" id="full-name" required="">
-                        <label for="email-address">Email Address</label>
-                        <input type="email" name="_replyto" id="email-address" required="">
-                        <label for="message">Message</label>
-                        <textarea rows="5" name="message" id="message" required=""></textarea>
-                        <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
-                    </fieldset>
-                    <input id="submit-contact" type="submit" value="Submit">
-                </form>
-                <p><strong>You can also find me on <a href="https://www.linkedin.com/in/scott-t-maynard/">LinkedIn</a>!</strong></p>
-            </div>
-        </div>
-    </body>    
+  <head>
+    <title>Scott T. Maynard - Contact</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="templates/homepage/styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="A website built by Scott T. Maynard" />
+    <meta
+      name="title"
+      property="og:title"
+      content="Scott T. Maynard's Contact Info"
+    />
+    <meta property="og:type" content="Website" />
+    <meta
+      name="image"
+      property="og:image"
+      content="https://live.staticflickr.com/65535/51744764943_310f9c1bc4_w.jpg"
+    />
+    <meta
+      name="description"
+      property="og:description"
+      content="A website built by Scott T. Maynard"
+    />
+    <meta name="author" content="Scott T. Maynard" />
+  </head>
+  <body>
+    <div class="header">
+      <img class="profile" src=templates/homepage/scott-circle.png>
+      <h1 class="profile-name">Scott Maynard</h1>
+      <div class="nav">
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="projects.html">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://github.com/smaynard90">GitHub</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="content">
+      <h1 style="text-align: center">Contact Me</h1>
+      <div class="form">
+        <form
+          id="fs-frm"
+          name="simple-contact-form"
+          accept-charset="utf-8"
+          action="https://formspree.io/f/mgerrjob"
+          method="post"
+        >
+          <fieldset id="fs-frm-inputs">
+            <label for="full-name">Full Name</label>
+            <input type="text" name="name" id="full-name" required="" />
+            <label for="email-address">Email Address</label>
+            <input
+              type="email"
+              name="_replyto"
+              id="email-address"
+              required=""
+            />
+            <label for="message">Message</label>
+            <textarea
+              rows="5"
+              name="message"
+              id="message"
+              required=""
+            ></textarea>
+            <input
+              type="hidden"
+              name="_subject"
+              id="email-subject"
+              value="Contact Form Submission"
+            />
+          </fieldset>
+          <input id="submit-contact" type="submit" value="Submit" />
+        </form>
+        <p>
+          <strong
+            >You can also find me on
+            <a href="https://www.linkedin.com/in/scott-t-maynard/">LinkedIn</a
+            >!</strong
+          >
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
