--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
         <link rel="stylesheet" href="templates/homepage/styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="A website built by Scott T. Maynard" />
+        <meta
+          name="title"
+          property="og:title"
+          content="Scott T. Maynard's Homepage"
+        />
+        <meta property="og:type" content="Website" />
+        <meta
+          name="image"
+          property="og:image"
+          content="https://live.staticflickr.com/65535/51744764943_310f9c1bc4_w.jpg"
+        />
+        <meta
+          name="description"
+          property="og:description"
+          content="A website built by Scott T. Maynard"
+        />
+        <meta name="author" content="Scott T. Maynard" />
     </head>
     <body>
         <div class="header">
