added middle initial to headings

--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
 <body>
     <div class="header">
         <img class="profile" src=templates/homepage/scott-circle.png>
-        <h1 class="profile-name">Scott Maynard</h1>
+        <h1 class="profile-name">Scott T. Maynard</h1>
         <div class="nav">
             <ul class="nav-list">
                 <li class="nav-item">
