edited intro and changed meta thumbnail

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <meta
           name="image"
           property="og:image"
-          content="https://live.staticflickr.com/65535/51744546976_f00e6fcba7_z.jpg"
+          content="https://live.staticflickr.com/65535/51745444855_96d2c7901c_z.jpg"
         />
         <meta
           name="description"
@@ -51,7 +51,7 @@
                 Hello, world! My name is Scott and I'm a self-taught developer.
             </p>
             <p>
-                After graduating from the University of Kansas in 2012, I initially began my career in sales. 
+                After graduating from the University of Kansas, I initially began my career in sales. 
                 Oddly, my colleagues always remarked that I seemed more like a programmer than a salesman.
                 This came as a surprise to me since I thought it was normal for salespeople to:
                 <ul>
