--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 Hello, world! My name is Scott and I'm a self-taught developer.
             </p>
             <p>
-                After graduating from the University of Kansas, I initially began my career in sales. 
+                After graduating from the University of Kansas, I began my career in sales. 
                 Oddly, my colleagues always remarked that I seemed more like a programmer than a salesman.
                 This came as a surprise to me since I thought it was normal for salespeople to:
                 <ul>
